refactor:eliminada query de controlador